# BronzeDB

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
bronzedb/: Cargo.toml
bronzedb-client/: Cargo.toml  README.md
bronzedb-client/examples/: interact.rs
bronzedb-client/src/: connection.rs  manager.rs
bronzedb-engine/: Cargo.toml  README.md
bronzedb-engine/src/: lib.rs
bronzedb-memory-db-server/: Cargo.toml  README.md
bronzedb-memory-db-server/src/: conf.rs  engine_impl.rs  main.rs
bronzedb-protocol/: Cargo.toml  README.md
bronzedb-protocol/src/: ext.rs  request.rs  response.rs
bronzedb-server/: Cargo.toml  README.md
bronzedb-server/src/: lib.rs
bronzedb-sled-db-server/: Cargo.toml  README.md
bronzedb-sled-db-server/src/: conf.rs  engine_impl.rs  main.rs
bronzedb-util/: Cargo.toml  README.md
bronzedb-util/src/: status.rs
bronzedb/src/: lib.rs
client/: Cargo.toml
client/examples/: interact.rs
client/src/: connection.rs  lib.rs  manager.rs
engine/: Cargo.toml
engine/src/: lib.rs  status.rs  util.rs
memory-db-server/: Cargo.toml
memory-db-server/src/: engine_impl.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  request.rs  response.rs  server.rs  util.rs
server/: Cargo.toml
server/src/: lib.rs
simple-kv-server/: Cargo.toml
simple-kv-server/src/: engine_impl.rs  main.rs
sled-db-server/: Cargo.toml  Settings.toml
sled-db-server/src/: engine_impl.rs  main.rs
tests/: Cargo.toml  Settings.toml
tests/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs  status.rs  types.rs
