[package]
name = "bronzedb"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "bronzedb is a kv-database, this is a reexport crate"
repository = "https://github.com/Hexilee/BronzeDB"
keywords = ["database", "kv"]
categories = ["database"]
readme = "README.md"
documentation = "https://docs.rs/bronzedb"

[workspace]
members = [
    "engine",
    "memory-db-server",
    "sled-db-server",
    "protocol",
    "util",
    "client",
    "server",
    "tests"
]

[dependencies]
engine = { path = "engine", version = "0.1"}
protocol = { path = "protocol", version = "0.1"}
util = { path = "util", version = "0.1"}
client = { path = "client", version = "0.1"}
server = { path = "server", version = "0.1"}

[badges]
travis-ci = { repository = "Hexilee/BronzeDB", branch = "master" }