[package]
name = "bronzedb-client"
version = "0.1.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "client lib for bronzedb"
repository = "https://github.com/Hexilee/BronzeDB"
keywords = ["database", "kv"]
categories = ["database"]
readme = "README.md"
documentation = "https://docs.rs/bronzedb-client"

[badges]
travis-ci = { repository = "Hexilee/BronzeDB", branch = "master" }

[dependencies]
bronzedb-protocol = { path = "../bronzedb-protocol", version = "0.1"}
bronzedb-util = { path = "../bronzedb-util", version = "0.1"}
r2d2 = "0.8"
