[package]
name = "bronzedb-memory-db-server"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

[dependencies]
bronzedb-engine = { path = "../bronzedb-engine", version = "0.1"}
bronzedb-server = { path = "../bronzedb-server", version = "0.1"}
bronzedb-util = { path = "../bronzedb-util", version = "0.1"}
env_logger = "0.6"