[package]
name = "bronzedb-protocol"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "protocol for bronzedb"
repository = "https://github.com/Hexilee/BronzeDB"
keywords = ["database", "kv"]
categories = ["database"]
readme = "README.md"
documentation = "https://docs.rs/bronzedb-protocol"

[badges]
travis-ci = { repository = "Hexilee/BronzeDB", branch = "master" }

[dependencies]
byteorder = "1.3"
bronzedb-util = { path = "../bronzedb-util", version = "0.1"}

[dev-dependencies]
matches = "0.1"
speculate = "0.1"