[package]
name = "tests"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

[dev-dependencies]
bronzedb-client = { path = "../bronzedb-client", version = "0.1"}
bronzedb-util = { path = "../bronzedb-util", version = "0.1"}
config = "0.9"
serde = "1.0"
serde_derive = "1.0"
speculate = "0.1.0"
